Surprisingly, it kinda works