@@ -16,6 +16,7 @@ import org.springframework.transaction.annotation.EnableTransactionManagement;
 
 import javax.sql.DataSource;
 import java.util.Collections;
+import java.util.Map;
 
 @Configuration
 @EnableJpaRepositories(
@@ -44,9 +45,14 @@ public class GalleryDbConfig {
         factory.setJpaVendorAdapter(new HibernateJpaVendorAdapter());
 
         // Optional configuration for naming strategy
-        factory.setJpaPropertyMap(Collections.singletonMap(
-                "hibernate.naming.physical-strategy",
-                "org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl"
+//        factory.setJpaPropertyMap(Collections.singletonMap(
+//                "hibernate.naming.physical-strategy",
+//                "org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl",
+//
+//        ));
+        factory.setJpaPropertyMap(Map.of(
+                "hibernate.naming.physical-strategy", "org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl",
+                "hibernate.hbm2ddl.auto", "update"
         ));
 
         return factory;
